# Mnemosyne

./: .gitignore  README.md  pyproject.toml  train.py
model/: __init__.py  adaptive.py  mamba.py  megabyte.py  transformer.py  vq.py
representations/: __init__.py  base.py  bpe.py  bpe_dropout.py  byte.py  char.py  ngram.py  patch.py  small_bpe.py  word.py
scripts/: ccca_analysis.py  ccca_freq_deconfound.py  ccca_freq_difficulty.py  ccca_frontier.py  plot_results.py  prepare_tinystories.py  run_all_wrapper.py  run_experiments.py  vq_frontier.py
