[project]
name = "mnemosyne"
version = "0.1.0"
description = "Experiments with alternative data representations in small language models"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.12.0",
    "numpy>=2.0.0",
    "datasets>=2.20.0",
    "transformers>=4.45.0",
    "matplotlib>=3.9.0",
    "pymupdf>=1.27.2.3",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
